tests/compile_pass/public_headers/export_text.cpp
#include <pb/core/export_text.hpp>

int pb_public_header_export_text() { return 0; }
